[package]
name = "bevy_rigid_body"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
nalgebra = "0.32.2"
bevy_integrator = { path = "../bevy_integrator" }
rusqlite = { version = "0.29.0", features = ["bundled"] }

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
